--- a/Module 7/react2/package.json
+++ b/Module 7/react2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-react-app",
+  "name": "react2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
