--- a/Module 9/microservice-app/package.json
+++ b/Module 9/microservice-app/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "socket-chat-app",
+  "name": "nbadb-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "mongoose": "^7.5.1"
   }
 }
